alignment + fix active config

--- a/web/stylesheet.css
+++ b/web/stylesheet.css
@@ -57,9 +57,12 @@
     margin-top: 2px;
 }
 
+.filler {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 .aircraft-list-entry {
     width: 80%;
     margin: auto;
-    margin-top: 5px;
-    margin-bottom: 5px;
 }
